# DataStructureVisualizer

./: .gitignore  AI_Usage_Declaration.md  README.md  commits_summary.txt  setup.sh
DataStructureVisualizer/: CMakeLists.txt  run.bat  run.command
DataStructureVisualizer/.cache/clangd/index/: AVLTree.cpp.EA746997D8C02E63.idx  AVLTree.h.156E7F5F25F20290.idx  AdjacencyList.cpp.FA0418533014CEBB.idx  AdjacencyList.h.F8842DA6D6F70DDF.idx  AdjacencyMatrix.cpp.CF44338A69F76433.idx  AdjacencyMatrix.h.C6292A4AF5876314.idx  AppEngine.cpp.ED650169C5AE959D.idx  AppEngine.h.060FFA1E3B18B154.idx  Button.cpp.3C1AF7BE0C7A1308.idx  Button.h.A46408A142A3D379.idx  CodePanel.cpp.2EA46795E3A9192F.idx  CodePanel.h.CFC609109487A4F3.idx  DataManager.cpp.ABA16DB10A42FCEF.idx  DataManager.h.ABEF27CAE0BC4F63.idx  Edge.h.425B167085810DAA.idx  Frame.cpp.76411C40EEDD29AA.idx  Frame.h.7A889874EF311872.idx  IGraphStructure.h.4DB2839E511B16A3.idx  IHeapStructure.cpp.AF62C194502EB735.idx  IHeapStructure.h.9062DDA40D804740.idx  IPayload.h.FC0DE6FBA50DFE2D.idx  IPayloadVisitor.h.064520657AA9E124.idx  IStandardStructure.h.98A653A58EF85BA8.idx  IVisualizable.h.9808E469234638A5.idx  InputMenu.cpp.B8FD6F25DA5C10D4.idx  InputMenu.h.CF28F9182EC18ED8.idx  MaxHeap.cpp.34DB79FA485371D2.idx  MaxHeap.h.1BB712F82F2CE144.idx  MinHeap.cpp.40D48A822F81626C.idx  MinHeap.h.69E9AD891EE576E2.idx  NavigationMenu.cpp.4192B6E3515AA354.idx  NavigationMenu.h.43D5DA166A4B62E2.idx  Payloads.h.72A68DB025C56B81.idx  Playback.cpp.6A30E2A8AADE89D7.idx  Playback.h.9E50B995B6DFD989.idx  Position.h.133A1F664D451360.idx  PseudocodeManager.cpp.88B6C51F0443BFE1.idx  PseudocodeManager.h.C18DB3F07B35EA97.idx  Renderer.cpp.5433A071F30C97A3.idx  Renderer.h.D8D20B1C3EAD32B6.idx  (+14 more)
DataStructureVisualizer/include/Controller/: AppEngine.h  Coordinate.h  DataManager.h  Playback.h  StructureType.h
DataStructureVisualizer/include/Model/: Frame.h  IDataStructure.h  IVisualizable.h  Theme.h  Timeline.h
DataStructureVisualizer/include/Model/DataStructure/: AVLTree.h  AdjacencyList.h  Heap.h  SinglyLinkedList.h
DataStructureVisualizer/include/Model/GraphStructure/: AdjacencyList.h  AdjacencyMatrix.h  Edge.h  GridGraph.h  IGraphStructure.h
DataStructureVisualizer/include/Model/HeapStructure/: IHeapStructure.h  MaxHeap.h  MinHeap.h
DataStructureVisualizer/include/Model/Payloads/: IPayload.h  IPayloadVisitor.h  Payloads.h
DataStructureVisualizer/include/Model/StandardStructure/: AVLTree.h  IStandardStructure.h  SinglyLinkedList.h
DataStructureVisualizer/include/Utilities/: GlobalConstant.h  LayoutConfig.h  MathUtils.h  Position.h  PseudocodeManager.h  StructureType.h
DataStructureVisualizer/include/View/: Button.h  CodePanel.h  InputMenu.h  NavigationMenu.h  Renderer.h  Slider.h  Theme.h  UIManager.h  Window.h
DataStructureVisualizer/include/View/Core/: Theme.h  Window.h
DataStructureVisualizer/include/View/Panels/: CodePanel.h  InputMenu.h
DataStructureVisualizer/include/View/Render/: Renderer.h
DataStructureVisualizer/include/View/Screens/: NavigationMenu.h
DataStructureVisualizer/include/View/UI/: UIManager.h  UIanimation.h
DataStructureVisualizer/include/View/Widgets/Sfml/: Button.h  Slider.h
DataStructureVisualizer/src/: main.cpp
DataStructureVisualizer/src/Controller/: AppEngine.cpp  Coordinate.cpp  DataManager.cpp  Playback.cpp
DataStructureVisualizer/src/Model/: Frame.cpp  Theme.cpp  Timeline.cpp
DataStructureVisualizer/src/Model/DataStructure/: AVLTree.cpp  AdjacencyMatrix.cpp  Heap.cpp  SinglyLinkedList.cpp
DataStructureVisualizer/src/Model/GraphStructure/: AdjacencyList.cpp  AdjacencyMatrix.cpp  GridGraph.cpp  IGraphStructure.cpp
DataStructureVisualizer/src/Model/HeapStructure/: IHeapStructure.cpp  MaxHeap.cpp  MinHeap.cpp
DataStructureVisualizer/src/Model/StandardStructure/: AVLTree.cpp  SinglyLinkedList.cpp
DataStructureVisualizer/src/Utilities/: PseudocodeManager.cpp
DataStructureVisualizer/src/View/: Button.cpp  CodePanel.cpp  InputMenu.cpp  NavigationMenu.cpp  Renderer.cpp  Slider.cpp  Theme.cpp  UIManager.cpp  Window.cpp
DataStructureVisualizer/src/View/Core/: Theme.cpp  Window.cpp
DataStructureVisualizer/src/View/Model/: Renderer_AVLTree.cpp  Renderer_Heap.cpp  Renderer_SinglyLinkedList.cpp
DataStructureVisualizer/src/View/Panels/: CodePanel.cpp  InputMenu.cpp
DataStructureVisualizer/src/View/Render/: Renderer.cpp
DataStructureVisualizer/src/View/Screens/: NavigationMenu.cpp
DataStructureVisualizer/src/View/UI/: UIManager.cpp  UIanimation.cpp
DataStructureVisualizer/src/View/Widgets/Sfml/: Button.cpp  (+1 more)
(+35 files in other folders)
